# serializer version: 1
# name: test_event_entities[event.back_door_access-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'access_granted',
        'access_denied',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.back_door_access',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Access',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Access',
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'access',
    'unique_id': 'door-002-access',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entities[event.back_door_access-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': None,
      'event_types': list([
        'access_granted',
        'access_denied',
      ]),
      'friendly_name': 'Back Door Access',
    }),
    'context': <ANY>,
    'entity_id': 'event.back_door_access',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_event_entities[event.back_door_doorbell-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'ring',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.back_door_doorbell',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Doorbell',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': 'Doorbell',
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell',
    'unique_id': 'door-002-doorbell',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entities[event.back_door_doorbell-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': None,
      'event_types': list([
        'ring',
      ]),
      'friendly_name': 'Back Door Doorbell',
    }),
    'context': <ANY>,
    'entity_id': 'event.back_door_doorbell',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_event_entities[event.front_door_access-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'access_granted',
        'access_denied',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.front_door_access',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Access',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Access',
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'access',
    'unique_id': 'door-001-access',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entities[event.front_door_access-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': None,
      'event_types': list([
        'access_granted',
        'access_denied',
      ]),
      'friendly_name': 'Front Door Access',
    }),
    'context': <ANY>,
    'entity_id': 'event.front_door_access',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_event_entities[event.front_door_doorbell-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'ring',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.front_door_doorbell',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Doorbell',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': 'Doorbell',
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell',
    'unique_id': 'door-001-doorbell',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entities[event.front_door_doorbell-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': None,
      'event_types': list([
        'ring',
      ]),
      'friendly_name': 'Front Door Doorbell',
    }),
    'context': <ANY>,
    'entity_id': 'event.front_door_doorbell',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
